exercice/docker/service-test.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-training
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: hello-training
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
